Adds personal profile & screenshots

--- a/proffessional-profile.html
+++ b/proffessional-profile.html
@@ -26,7 +26,7 @@
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
-  <h3 class="header center orange-text">Proffessional Profile</h3>
+  <h3 class="header center orange-text">Professional Q</h3>
 
   
     <div class="container col s4 offset-s4 center">
@@ -37,9 +37,9 @@
 
     <div id="js-legend" class="chart-legend">
       <ul class="doughnut-legend">
-        <li><span style="background-color:#F7464A"></span>Adaptability</li>
-        <li><span style="background-color:#46BFBD"></span>Team spirit</li>
-        <li><span style="background-color:#FDB45C"></span>Communication</li>
+        <li><span style="background-color:#F7464A"></span>C++</li>
+        <li><span style="background-color:#46BFBD"></span>HTML 5</li>
+        <li><span style="background-color:#FDB45C"></span>Projects</li>
       </ul>
     </div>
 
@@ -98,19 +98,19 @@
               value: 50,
               color:"#F7464A",
               highlight: "#FF5A5E",
-              label: "Adaptability",
+              label: "C++",
           },
           {
               value: 20,
               color: "#46BFBD",
               highlight: "#5AD3D1",
-              label: "Team spirit"
+              label: "HTML 5"
           },
           {
               value: 30,
               color: "#FDB45C",
               highlight: "#FFC870",
-              label: "Communication"
+              label: "Projects"
           }
       ]
 
