--- a/hybridauth/hybridauth/login.html
+++ b/hybridauth/hybridauth/login.html
@@ -3,7 +3,7 @@
 <body align="center">
 	
 	<div align="center">
-	<h1>Login with Facebook,Twitter & Google</h1>
+	<h1>Login with Twitter</h1>
 	
 	<!-- <a href="login-with.php?provider=Facebook"><img src='facebook.png'></img></a> <br><br> -->
 	<a href="login-with.php?provider=Twitter"><img src='twitter.png'></img></a> <br><br><!-- 
