--- a/hybridauth/hybridauth/login.html
+++ b/hybridauth/hybridauth/login.html
@@ -6,7 +6,7 @@
 	<h1>Login with Twitter</h1>
 	
 	<!-- <a href="login-with.php?provider=Facebook"><img src='facebook.png'></img></a> <br><br> -->
-	<a href="login-with.php?provider=Twitter"><img src='twitter.png'></img></a> <br><br><!-- 
+	<a href="login-sample.php?provider=Twitter"><img src='twitter.png'></img></a> <br><br><!-- 
 	<a href="login-with.php?provider=Google"><img src='google.png'></img></a><br><br> -->
 	</div>
 
